--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <h1 id="text">GAME HERE</h1>
+    <h2 id="text">GAME HERE</h2>
+    <div id="container"></div>
 
     <script src="main.js"></script>
 </body>
