Add DOM function

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,9 +9,15 @@
 </head>
 <body>
 
-    <h2 id="text">GAME HERE</h2>
-    <div id="container"></div>
+<h1>This is a JS example</h1>
 
-    <script src="main.js"></script>
+<h2 id="text">Some text</h2>
+
+<div id="container">
+    <!-- initially empty -->
+</div>
+
+<script src="main.js"></script>
+
 </body>
 </html>
