Add game.js & game.html

--- a/src/main/resources/public/game.html
+++ b/src/main/resources/public/game.html
@@ -5,15 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Games</title>
+    <title>Game</title>
 </head>
 <body>
 
-<h1>Games</h1>
+<div id="game-container"></div>
 
-<div id="container"></div>
-
-<script src="games.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="game.js"></script>
 
 </body>
 </html>
