Create React components

--- a/src/main/resources/public/games.html
+++ b/src/main/resources/public/games.html
@@ -13,6 +13,7 @@
 
 <div id="container"></div>
 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="games.js"></script>
 
 </body>
