--- a/src/main/resources/public/game.html
+++ b/src/main/resources/public/game.html
@@ -11,6 +11,8 @@
 
 <div id="game-container"></div>
 
+<a href="/games.html">Go back to games</a>
+
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="game.js"></script>
 
