--- a/src/main/resources/public/react-sample.html
+++ b/src/main/resources/public/react-sample.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <title>React Example</title>
 
-    <!--
-        This way of setting up React is not usual, but it's an easy way to start.
-        Usually you use the `create-react-app` tool.
-    -->
-
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 
@@ -18,6 +13,7 @@
     <!-- Add your components here -->
     <script type="text/babel" src="/components/App.js"></script>
     <script type="text/babel" src="/components/Title.js"></script>
+    <script type="text/babel" src="/components/GamesList.js"></script>
 
 </head>
 <body>
@@ -32,15 +28,5 @@
         document.getElementById('root')
     );
 </script>
-<!--
-  Note: this page is a great way to try React but it's not suitable for production.
-  It slowly compiles JSX with Babel in the browser and uses a large development build of React.
-  Read this section for a production-ready setup with JSX:
-  https://reactjs.org/docs/add-react-to-a-website.html#add-jsx-to-a-project
-  In a larger project, you can use an integrated toolchain that includes JSX instead:
-  https://reactjs.org/docs/create-a-new-react-app.html
-  You can also use React without JSX, in which case you can remove Babel:
-  https://reactjs.org/docs/react-without-jsx.html
--->
 </body>
 </html>
