Organize components in react-sample.html

--- a/src/main/resources/public/react-sample.html
+++ b/src/main/resources/public/react-sample.html
@@ -11,9 +11,12 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 
     <!-- Add your components here -->
-    <script type="text/babel" src="/components/App.js"></script>
+
     <script type="text/babel" src="/components/Title.js"></script>
+    <script type="text/babel" src="/components/Link.js"></script>
+    <script type="text/babel" src="/components/Article.js"></script>
     <script type="text/babel" src="/components/GamesList.js"></script>
+    <script type="text/babel" src="/components/App.js"></script>
 
 </head>
 <body>
