--- a/src/main/resources/public/games.html
+++ b/src/main/resources/public/games.html
@@ -7,11 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Games</title>
 </head>
-<body>
+<body onLoad="displayGames()">
 
 <h1>Games</h1>
 
+<!--<div id="root"></div>-->
+
 <div id="container"></div>
+<button id="button" type="button" onclick="createGame()">Create game</button>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="games.js"></script>
