Try using React (not finished)

--- a/src/main/resources/public/games.html
+++ b/src/main/resources/public/games.html
@@ -14,7 +14,7 @@
 <!--<div id="root"></div>-->
 
 <div id="container"></div>
-<button id="button" type="button" onclick="createGame()">Create game</button>
+<button id="button" onclick="createGame()">Create game</button>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="games.js"></script>
