implement join game button (not working)

--- a/src/main/resources/public/game.html
+++ b/src/main/resources/public/game.html
@@ -11,7 +11,7 @@
 
 <div id="game-container"></div>
 
-<a href="/games.html">Go back to games</a>
+<a href="/games.html">Go back to Game List</a>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="game.js"></script>
